--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <img src="img/logo.png" alt="">
         </header>
         <main class="main">
+            <div class="face">
+                <img src="img/face.png" alt="">
+            </div>
+            <div class="mouth">
+                <img src="img/mouth.png" alt="">
+            </div>
+            <div class="smile opacity0">
+                <img src="img/smile.png" alt="">
+            </div>
             <canvas class="glass"></canvas>
         </main>
         <div class="footer">
